--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -3,7 +3,7 @@ html {
   box-sizing: border-box;
   color: $c-black;
   font: {
-    family:  'Barlow', sans-serif;
+    family: 'Poppins', sans-serif;
     size: 16px;
   }
   text-rendering: optimizeLegibility;
