--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -74,7 +74,7 @@
       justify-content: center;
       width: 100%;
       a {
-        background: linear-gradient(39.97deg, #12C9FD 0.79%, #1A60E8 79.29%);
+        background: linear-gradient(39.97deg, #E34083 0.79%, #EF2779  79.29%);
         color: $c-white;
         width: 100%;
         text-align: center;
