--- a/src/sass/subtemplates/_header.scss
+++ b/src/sass/subtemplates/_header.scss
@@ -1,9 +1,21 @@
+.headroom {
+  will-change: transform;
+  transition: transform 200ms linear;
+}
+.headroom--pinned {
+  transform: translateY(0%);
+}
+.headroom--unpinned {
+  transform: translateY(-100%);
+}
+
 .header {
   width: 100%;
   height: auto;
-  background-color: $c-white;
+  background-color: transparent;
   padding: 20px 24px;
   font-weight: 500;
+  position: fixed;
 
   
   &__logo {
