--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -9,7 +9,7 @@
     background-position: 0 100%;
 
     &--wrapper {
-      padding: 180px 0 0;
+      padding: 120px 0 0;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -21,6 +21,7 @@
         align-items: center;
         justify-content: space-between;
         margin-bottom: 30px;
+        padding: 180px 0 0;
       }
     }
 
@@ -53,14 +54,15 @@
         font: {
           size: 40px;
         };
-        line-height: 42px;
+        line-height: 48px;
         margin-bottom: 20px;
+        max-width: 380px;
         @media screen and (min-width: 769px) { 
           font: {
-            size: 62px;
+            size: 42px;
             weight: 700;
           }
-          line-height: 70px;
+          line-height: 48px;
           margin-bottom: 30px;
         }
       }
@@ -70,12 +72,13 @@
           weight: 500;
         };
         margin-bottom: 20px;
+        max-width: 380px;
         @media screen and (min-width: 769px) { 
           font: {
-            size: 24px;
+            size: 18px;
             weight: 500;
           }
-          line-height: 28px;
+          line-height: 24px;
         }
       }
     }
@@ -85,14 +88,17 @@
       justify-content: center;
       width: 100%;
       a {
-        background: linear-gradient(39.97deg, #E34083 0.79%, #EF2779  79.29%);
+        background: linear-gradient(39.97deg, #03ffa5 0.79%, #02e594 79.29%);
         color: $c-white;
         width: 100%;
         text-align: center;
+        text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+        text-transform: uppercase;
         max-width: 320px;
         padding: 20px;
         border-radius: 50px;
       }
+      
     }
   }
   
