ajuste scroll da vitrine

--- a/src/sass/subtemplates/_vitrine.scss
+++ b/src/sass/subtemplates/_vitrine.scss
@@ -39,7 +39,8 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-
+        width: 230px;
+        margin: auto;
         a {
           width: 100%;
           background-color: $c-green-jussi;
